--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -9,34 +9,35 @@
 
 ====Related terms====
 *[[Israeli]]
+*[[Israelite]]
 
 # Country in the [[Middle East]], located at eastern [[shore]] of the [[Mediterranean]]. Official name: State of Israel.
-#:'''Translations'''
-#:*[[Breton]]: Israel
-#:*[[Catalan]]: Israel ''m''
-#:*Chinese: [[以色列]]
-#:*Czech: [[Izrael]]
-#:*Danish: Israel
-#:*Dutch: [[Israël]]
-#:*[[Esperanto]]: [[Israelo]]
-#:*Finnish: Israel
-#:*French: [[Israël]]
-#:*German: Israel
-#:*Greek: [[Ισραήλ]]
-#:*Hebrew: [[ישראל]]
-#:*Indonesian: Israel
-#:*[[Interlingua]]: Israel
-#:*Italian: [[Israele]]
-#:*Japanese: [[イスラエル]] (isuraeru)
-#:*Polish: [[Izrael]]
-#:*Portuguese: Israel
-#:*Romanian: Israel ''n''
-#:*Russian: [[Израиль]] (Izraily)
-#:*Spanish: Israel
-#:*Swedish: Israel
 
-''See'': [[Countries of the world]]
+====Translations====
+*Arabic: [[إسرائيل]]
+*[[Breton]]: Israel
+*[[Catalan]]: Israel ''m''
+*Chinese: [[以色列]]
+*Czech: [[Izrael]]
+*Danish: Israel
+*Dutch: [[Israël]]
+*[[Esperanto]]: [[Israelo]]
+*Finnish: Israel
+*French: [[Israël]]
+*German: Israel
+*Greek: [[Ισραήλ]]
+*Hebrew: [[ישראל]]
+*Indonesian: Israel
+*[[Interlingua]]: Israel
+*Italian: [[Israele]]
+*Japanese: [[イスラエル]] (isuraeru)
+*Polish: [[Izrael]]
+*Portuguese: Israel
+*Romanian: Israel ''n''
+*Russian: [[Израиль]] (Izraily)
+*Spanish: Israel
+*Swedish: Israel
 
-=== Further reading ===
-
-* [[w:Israel|Wikipedia article on Israel]]
+===See also===
+*[[Countries of the world]]
+*[[w:Israel|Wikipedia article on Israel]]
