--- a/en/愍/愍.15649.wikitext
+++ b/en/愍/愍.15649.wikitext
@@ -10,11 +10,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': pity, sympathize with
+* '''Common Meaning''': [[pity]], [[sympathize with]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,7 +30,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[びん]] (bin), [[みん]] (min)
@@ -40,7 +40,7 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
 * '''[[Hangeul]]''': 민
 
