--- a/en/b/butter.7388.wikitext
+++ b/en/b/butter.7388.wikitext
@@ -10,6 +10,7 @@
 *Bulgarian: [[масло]] ''n''
 *Czech: [[máslo]]  ''n''
 *Dutch: [[boter]] ''f''
+*[[Finnish]]: [[voi]]
 *French: [[beurre]] ''m''
 *German: Butter ''f''
 *Greek: [[βούτυρο]]
