--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -19,7 +19,7 @@
 #:*Hebrew: [[ארצות הברית]],(Artzot Habrit) Short: [[ארה״ב]]
 #:*Indonesian: [[Amerika Serikat]]
 #:*[[Irish]]: [[Meiriceá]] ''m4''
-#:*Japanese: [[米国]] (べいこく, beikoku)
+#:*Japanese: [[米国]] (べいこく, beikoku), [[アメリカ合衆国]] (アメリカがっしゅうこく, amerika gasshūkoku)
 #:*Korean: [[미국]] South: [美國] North: [米國] (mi-gwuk)
 #:*Polish: [[Stany Zjednoczone Ameryki]], short: [[Stany Zjednoczone]], full: [[Stany Zjednoczone Ameryki Północnej]], colloquial: [[Stany]]
 #:*Romanian: [[Statele Unite ale Americii]], short: [[Statele Unite]], very short: [[SUA]]
