--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -11,14 +11,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#earth
-*# soil, ground
-*# region
-
+*#[[earth]]
+*# [[soil]], [[ground]]
+*# [[region]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -34,7 +33,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ち]] (chi), [[じ]] (ji)
@@ -44,7 +43,7 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
 * '''Pronunciation''': 지
 
