--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -29,12 +29,13 @@ US English SAMPA: /dZ3`:mIni/
 *Greek: [[Γερμανία]]
 *Hebrew: [[גרמניה]] (Germaniya)
 *Hungarian: [[Németország]]
-*Indonesian: [[Jerman]]
+*[[Indonesian]]: [[Jerman]]
 *[[Interlingua]]: [[Germania]]
 *[[Irish]]: [[an Ghearmáin]] ''f''
 *Italian: [[Germania]] ''f''
-*Japanese: [[ドイツ]] (Doitsu)
+*[[Japanese]]: [[ドイツ]] (Doitsu)
 *Latin: [[Germania]] ''f''
+*[[Malay]]: [[Jerman]]
 *Polish: [[Niemcy]]
 *Portuguese: [[Alemanha]]
 *Romanian: [[Germania]] ''f''
