--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -19,10 +19,11 @@
 *[[Frisian]]: [[Feriene Steaten fan Amearika]]
 *German: [[Vereinigte Staaten von Amerika]], short: [[USA]]
 *Hebrew: [[ארצות הברית]],(Artzot Habrit) Short: [[ארה״ב]]
-*Indonesian: [[Amerika Serikat]]
+*{{id}}: [[Amerika Serikat]]
 *[[Irish]]: [[Meiriceá]] ''m4''
 *Japanese: [[米国]] (べいこく, beikoku), [[アメリカ合衆国]] (アメリカがっしゅうこく, amerika gasshūkoku)
 *Korean: [[미국]] South: [美國] North: [米國] (mi-gwuk)
+*{{ms}}: [[Amerika Syarikat]]
 *Polish: [[Stany Zjednoczone Ameryki]], short: [[Stany Zjednoczone]], full: [[Stany Zjednoczone Ameryki Północnej]], colloquial: [[Stany]]
 *Romanian: [[Statele Unite ale Americii]], short: [[Statele Unite]], very short: [[SUA]]
 *Russian: [[Соединённые Штаты Америки]], short: [[США]]
