--- a/en/時/時.17003.wikitext
+++ b/en/時/時.17003.wikitext
@@ -13,13 +13,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#time, season
-*# era, age, period
-
+*#[[time]], [[season]]
+*# [[era]], [[age]], [[period]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -38,7 +37,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[じ]] (ji), [[し]] (shi)
@@ -48,7 +47,7 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
 * '''[[Hangeul]]''': 시
 
