--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -1,3 +1,4 @@
+==English==
 === Noun ===
 '''bridge''' (plural: [[bridges]])
 
@@ -14,4 +15,4 @@
 *Spanish: [[puente]]
 
 ===Verb===
-'''to bridge'''
+'''to bridge''' ([[bridges]], [[bridged]], [[bridging]])
