--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -17,6 +17,9 @@
 #:''a straight six''.
 #[[''slang'']]: conventional.
 #[[''slang'']]: heterosexual.
+#(Slang) boring, unappealing, bad or of low quality.
+===Usage Notes===
+*Straight is sometimes humorously used as meaning low quality by homosexuals and bisexuals, rather than [[gay]].
 ===Translations===
 *[[Dutch]]: [[recht]] (1), [[rechte]] (1), [[zoals het hoort]] (3), [[puur]] (5), [[pure]] (5)
 *[[French]]: [[droit]] ''m'' (1), [[droite]] ''f'' (1), [[comme il faut]] (3), [[pur]] (5), [[pure]] (5)
