--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -14,10 +14,10 @@
 *Hungarian: [[Csehország]]
 *Interlngua: [[Republica Chec]]
 *Italian: la [[repubblica Ceca]] ''f''
-*Japanese: [[チェコ共和国]] (ちぇこきょうわこく, cheko-kyowakoku)
+*Japanese: [[チェコ共和国]] (チェコきょうわこく, cheko-kyowakoku)
 *Polish: [[Czechy]]
 *Portuguese: [[República Tcheca]]
-*Romanian: [[Cehia]], [[Republica Ceh&#259]] ''f''
+*Romanian: [[Cehia]], [[Republica Cehă]] ''f''
 *Turkish: [[Çek Cumhuriyeti]]
 
 ====See also====
