--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -22,6 +22,7 @@
 *French: [[Nouvelle-Zélande]] ''f''
 *German: [[Neuseeland]] ''n''
 *Greek: [[Νέα Ζηλανδία]]
+*[[Hungarian]]: [[Új-Zéland]]
 *[[Indonesian]]: [[Selandia Baru]]
 *[[Interlingua]]: [[Nove Zelanda]]
 *Italian: [[Nuova Zelanda]]
