--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -1,12 +1,19 @@
+==English==
 ===Etymology===
-:from the Latin ''et cetera'', meaning ''and the rest''
+Latin phrase '''et cetera''', meaning ''and the rest''
 
 ===Adverb===
-#and the rest, and so on
+#and the rest, and so on, and the others
 #:Et cetera, or [[abbreviation|abbreviated]] etc., is used in many texts as a replacement for the English [[phrase]] 'and so on'. 
 
+====Spelling Variations====
+*[[&c]]
+*[[etc]]
+*[[etc]].
+*[[etcetera]]
+
 ====Example====
-The [[grocery]] sells [[cucumber]]s, [[lettuce]], [[radish]]es etc.
+The [[grocery]] sells [[cucumber]]s, [[lettuce]], [[radish]]es, etc.
 
 ====Translations====
 *Dutch: [[enzovoort]], [[enz.]], et cetera
@@ -14,3 +21,17 @@ The [[grocery]] sells [[cucumber]]s, [[lettuce]], [[radish]]es etc.
 *Slovak: [[a tak ďalej]]
 *Spanish: [[etc鴥ra]], [[y m᳝], [[al fin]]
 *Vietnamese: [[v⮠v⮝], [[v.v.]]
+
+==Latin==
+===Phrase===
+'''et cetera'''
+
+# and the rest, and the others, and so on
+
+===Usage Note===
+Often abbreviated "etc." or "&c". [[Ampersand]] ("[[&]]") comes from the Latin word '''[[et]]''', meaning ''and''.
+
+===Related Terms===
+*[[&]]
+*[[cetera]]
+*[[et]]
