--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -36,6 +36,7 @@
 *Portuguese: Israel
 *Romanian: Israel ''n''
 *Russian: [[Израиль]] (Izraily)
+*Slovene: [[Izrael]] ''m''
 *Spanish: Israel
 *Swedish: Israel
 *Turkish: [[İsrail]]
