--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -35,6 +35,7 @@
 *Slovene: [[Nova Zelandija]] ''f''
 *Spanish: [[Nueva Zelanda]] ''f''
 *Swedish: [[Nya Zeeland]]
+*Turkish: [[Yeni Zelanda]]
 
 ====Derived words====
 *[[New Zealander]]
