--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -5,8 +5,10 @@
 #a person who keeps records, takes notes and handles general clerical work.
 #the head of a department of government.
 #a type of desk.
+#a species of bird; ''Sagittarius serpentarius''.
 ====[[Translation]]s====
 *[[Esperanto]]: [[sekretario]] (1,2)
+*[[German]]: [[Sekretär]] ''m'' (1, 4)
 *[[Indonesian]]: [[sekretaris]]
 *[[Interlingua]]: [[secretario]] ''m'', [[secretaria]] ''f'' (1,2); [[scriptorio]], [[bureau]] (3)
 *[[Japanese]]: [[秘書]] ([[ひしょ]], hisho), [[長官]] ([[ちょうかん]], chōkan) (?)
