--- a/en/惯/惯.15620.wikitext
+++ b/en/惯/惯.15620.wikitext
@@ -13,8 +13,8 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#habit, custom
-*# habitually, usual
+*#[[habit]], [[custom]]
+*# [[habitually]], [[usual]]
 
 
 ----
