--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -18,6 +18,7 @@
 *Dutch: [[pruimenboom]] (1), [[pruim]] (2), [[donkerrood]] (3), [[rozijn]] (5)
 *French: [[prune]] ''f'' (2)
 *[[Frisian]]: [[prom]] (2), [[rezyn]] (5)
+*Galician: [[ameixeira]] ''f'' (1), [[ameixa]] ''f'' (2)
 *German: [[Pflaume]] ''f''
 *Italian: [[prugno]] ''m'' (1), [[prugna]] ''f'' (2)
 *Spanish: [[ciruela]] ''f''
