--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -21,6 +21,7 @@
 *Galician: [[ameixeira]] ''f'' (1), [[ameixa]] ''f'' (2)
 *German: [[Pflaume]] ''f''
 *Italian: [[prugno]] ''m'' (1), [[prugna]] ''f'' (2)
+*Russian: [[слива]] ''f'' (2)
 *Spanish: [[ciruela]] ''f''
 *Swedish: [[plommonträd]] ''n'' (1), [[plommon]] ''n'' (2)
 
