--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -22,6 +22,7 @@
 *Indonesian: [[gelegar]], [[suara]] [[petir]], [[suara halilintar]]
 *[[Interlingua]]: [[tonitro]]
 *Japanese: [[雷鳴]] ([[らいめい]], raimei)
+*Norwegian: [[torden]]
 *Polish: [[grzmot]] ''m''
 *Portuguese: [[trovão]] ''m''
 *Spanish: [[rugiente]]
