--- a/en/垂/垂.13061.wikitext
+++ b/en/垂/垂.13061.wikitext
@@ -23,13 +23,57 @@
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': chúi (chui2)
+*** '''[[Pinyin]]''': chuí (chui2)
 *** '''[[Wade-Giles]]''': ch'ui<sup>2</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
 *** '''[[Jyutping]]''':
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': seui4
+
+===Compounds===
+*[[垂爱]]
+*[[垂成]]
+*[[垂垂]]
+*[[垂钓]]
+*[[垂范]]
+*[[垂挂]]
+*[[垂花门]]
+*[[垂绝]]
+*[[垂老]]
+*[[垂泪]]
+*[[垂怜]]
+*[[垂帘听政]]
+*[[垂柳]]
+*[[垂落]]
+*[[垂暮]]
+*[[垂念]]
+*[[垂盼]]
+*[[垂泣]]
+*[[垂青]]
+*[[垂示]]
+*[[垂手]]
+*[[垂首]]
+*[[垂死]]
+*[[垂体]]
+*[[垂涕]]
+*[[垂髫]]
+*[[垂头丧气]]
+*[[垂亡]]
+*[[垂危]]
+*[[垂问]]
+*[[垂涎]]
+*[[垂线]]
+*[[垂悬]]
+*[[垂询]]
+*[[垂杨柳]]
+*[[垂衣拱手]]
+*[[垂直]]
+*[[垂直带]]
+*[[垂直关系]]
+*[[垂直贸易]]
+*[[垂直起落飞机]]
+*[[垂直尾翼]]
 
 * '''Other info''': 
 
