--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -17,7 +17,7 @@
 *Dutch: [[brug]]
 *Finnish: [[silta]]
 *French: [[pont]] ''m''
-*Frisian: [[brêge]]
+*[[Frisian]]: [[brêge]]
 *German: [[Brücke]] ''f''
 *Indonesian: [[jembatan]]
 *Italian: [[ponte]] ''m''
@@ -29,7 +29,7 @@
 *[[Old English]]: [[brycg]] ''f''
 *Korean: [[다리]] (da-ri), [[Hanja]]: [[교]] (kyo, used always as suffix)
 *Latvian: [[tilts]] ''m''
-*[[Polish]]: most ''m''
+*Polish: [[most]] ''m''
 *Spanish: [[puente]] ''f''
 *Swedish: [[bro#Swedish|bro]] ''c''
 *Turkish: [[köprü]]
@@ -44,12 +44,12 @@
 *Danish: bridge
 *Dutch: bridge
 *French: bridge ''m''
+*Latvian: [[bridžs]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Latvian: [[bridžs]] ''m''
-*[[Polish]]: [[brydż]] ''m''
+*Polish: [[brydż]] ''m''
 *Swedish: bridge
 *Turkish: [[briç]]
 |}
