--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -3,11 +3,16 @@
 From the Latin [[id est]], meaning "that is"
 
 ===Adverbial phrase===
-''i.e.''
+'''i.e.'''
+
 #That is, in other words, that is to say.
+
 ===Usage notes===
 *Use '''i.e.''' to explain or clarify a statement by either (exhaustively) listing  options or by rephrasing the previous statement.  
 *Always follow '''i.e.''' by a [[comma]] when used in it's function as a clarifier. 
 *When used in a sentence, '''i.e.''' should be used parenthetically ('''i.e.''', embraced in parentheses).
 *Opinion is mixed about whether this abbreviations should be italicized, or whether there should be a separating non-breaking space as in '''i.&nbsp;e.'''.
 *'''ie:''' is often found in current usage, and is perhaps now considered acceptable.
+
+====Translations====
+*French: [[c.-à-d.]]
