--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -21,10 +21,10 @@
 ====Usage Notes====
 *Straight is sometimes humorously used as meaning low quality by homosexuals and bisexuals, rather than [[gay]].
 ====Translations====
-*[[Dutch]]: [[recht]] (1), [[rechte]] (1), [[zoals het hoort]] (3), [[puur]] (5), [[pure]] (5)
-*[[French]]: [[droit]] ''m'' (1), [[droite]] ''f'' (1), [[comme il faut]] (3), [[pur]] (5), [[pure]] (5), [[hetero]] (8)
-*[[Portuguese]]: [[reto]] ''m'' (1), [[direto]] ''m'' (3), [[honesto]] ''m'' (3), [[direito]] ''m'' (4)
-*[[Swedish]]: [[rak]] (1,3,6)
+*[[{{nl}}]]: [[recht]] (1), [[rechte]] (1), [[zoals het hoort]] (3), [[puur]] (5), [[pure]] (5)
+*[[{{fr}}]]: [[droit]] ''m'' (1), [[droite]] ''f'' (1), [[comme il faut]] (3), [[pur]] (5), [[pure]] (5), [[hetero]] (8)
+*[[{{pt}}]]: [[reto]] ''m'' (1), [[direto]] ''m'' (3), [[honesto]] ''m'' (3), [[direito]] ''m'' (4)
+*[[{{sv}}]]: [[rak]] (1,3,6)
 
 ===Adverb===
 '''straight'''
