--- a/en/慄/慄.15703.wikitext
+++ b/en/慄/慄.15703.wikitext
@@ -77,3 +77,5 @@
 * '''Big5''':
 ** Hex: B758
 ** Decimal: 46936
+
+[[Category:CJKV simplified characters which already existed as traditional characters]]
