--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -11,4 +11,5 @@
 *[[French]]: [[estomac]] ''m''
 *[[Frisian]]: [[mage]]
 *[[Polish]]: [[żołądek]] ''m''
-*[[Spanish]]: [[estomago]] ''m''
+*[[Russian]]: [[желудок]] ''m'' (želúdok)
+*[[Spanish]]: [[estómago]] ''m''
