--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -81,6 +81,7 @@
 {|
 <!--languages from A to I go here-->
 *{{fi}}: [[soittaa]]
+*{{it}}: [[suonare]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -109,9 +110,6 @@
 *French: jouer à (1), jouer de (2)
 *:They're playing cards - ''Ils jouent aux cartes''
 *:I play the piano - ''Je joue du piano''
-*Italian: [[giocare]] a (1), [[suonare]] (2)
-*:They're playing cards - ''Giocano alle carte''
-*:I play the piano - ''Suono il piano''
 * Slovak: [[hrať]]
 *Slovene: [[igrati]] (1, 2)
 *Spanish: [[jugar]] a (1), [[jogar]] (2) ('''or "jugar de/a"?''') , [[tocar]] (2)
