--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -1,6 +1,7 @@
-===Verb===
-'''to float'''
+==English==
 
+===Verb===
+'''to float''' ([[floating]], [[floated]], [[floats]])
 #To sit on top of a liquid of greater density than the object or substance floating.
 #: ''A boat is built to float on water''
 #: ''The oil floated on the vinegar''
@@ -25,8 +26,7 @@
 *Italian: [[galleggiare]]
 
 ===Noun===
-'''float'''
-
+'''float''' (Plural: '''floats''')
 #A [[buoyant]] device used to support something in water or another liquid.
 #A sort of [[trowel]] used for finishing [[concrete]] surfaces.
 #An elaborately decorated trailer or vehicle, intended for display in a parade]] or [[pageant]].
@@ -34,5 +34,7 @@
 ## (''[[banking]]'') The total amount of checks or other drafts written against a bank account but not yet cleared and charged against the account.
 ##(''[[insurance]]'') Premiums taken in but not yet paid out
 # (''[[programming]]'') Short form of [[floating-point number]].
+#A beverage (often [[root-beer]]) with a [[scoop]] of vanilla [[ice-cream]] [[floating]] in it.
+
 ====Translations====
 *Dutch: [[vlot]]???? ''n''
