--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -16,6 +16,7 @@
 *[[German]]: [[Graf]] ''m'' (1)
 *[[Lithuanian]]: [[grafas]] ''m'' (1)
 *[[Polish]]: [[hrabia]] ''m'', [[hrabina]] ''f'' (1), [[odliczanie]] ''n'' (3)
+*[[Portuguese]]: [[conde]] ''m'' (1)
 *[[Romanian]] [[conte]] ''m'' (1), [[numărare]] ''f'' (2), [[numărătoare]] ''f'' (3)
 *[[Russian]]: [[граф]] (1), [[счёт]] (2), [[отсчёт]] (3)
 *[[Slovene]]: [[grof]] ''m'' (1), [[rezultat]] ''m'' (2), [[odštevanje]] ''n'' (3)
@@ -40,6 +41,7 @@
 *[[German]]: [[zählen]]
 *[[Italian]]: [[contare]]
 *[[Polish]]: [[liczyć]]
+*[[Portuguese]]: [[contar]]
 *[[Romanian]]: [[număra]]
 *[[Russian]]: [[считать]] ''imperf''
 *[[Spanish]]: [[contar]]
