--- a/en/h/het.1522.wikitext
+++ b/en/h/het.1522.wikitext
@@ -13,4 +13,5 @@ Note about [[grammatical gender in Dutch]]: all [[diminutive|diminutives]] are a
 ==== Translations ====
 English: [[the]]
 
-[[nl:Het]]
+[[nl:het]]
+[[ru:Het]]
