--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -8,7 +8,7 @@
 *Breton: [[Republik Tchek]]
 *Catalan: [[República Txeca]] ''f''
 *Chinese: [[捷克]] (Jiékè)
-*Czech: [[Česká republika]]  ''f'', [[Česko]] ''n''
+*Czech: [[Česká republika]]  ''f'', [[Česko]] ''n'', [[Čechy]] ''n''
 *Dutch: [[Tsjechië]]
 *Finnish: [[Tšekin tasavalta]], [[Tšekki]]
 *German: [[Tschechische Republik]]
