--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -14,7 +14,7 @@
 *Danish: [[kamp]] ''c'' (1,2,3)
 *Finnish: [[tappelu]] (1), [[ottelu]] (3)
 *French: [[bagarre]] ''f''
-*German: [[Kampf]] (1,2,3)
+*German: [[Kampf]] ''m'' (1,2,3)
 *Polish: [[walka]] ''f''
 
 == Verb ==
