--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -12,6 +12,7 @@
 
 ===Translations===
 *Danish: [[kamp]] ''c'' (1,2,3)
+*Dutch: [[gevecht]] ''n''
 *Finnish: [[tappelu]] (1), [[ottelu]] (3)
 *French: [[bagarre]] ''f''
 *German: [[Kampf]] ''m'' (1,2,3)
@@ -25,10 +26,10 @@
 
 === Translations ===
 *Danish: [[kæmpe]]
-*[[Dutch]]: [[vechten]]
-*[[Finnish]]: [[tapella]]
-*[[German]]: [[kämpfen]]
-*[[Indonesian]]: [[tarung]], [[tengkar]], [[serang]]
-*[[Japanese]]: [[喧嘩する]] ([[けんかする]], kenka-suru), [[対決]] ([[たいけつする]], taiketsu-suru), [[戦う]] / [[闘う]] ([[たたかう]], tatakau), [[闘]] ([[とう]], tô)
-*[[Romanian]]: [[luptă]] ''f'', [[bătaie]] ''f''
+*Dutch: [[vechten]]
+*Finnish: [[tapella]]
+*German: [[kämpfen]]
+*Indonesian: [[tarung]], [[tengkar]], [[serang]]
+*Japanese: [[喧嘩する]] ([[けんかする]], kenka-suru), [[対決]] ([[たいけつする]], taiketsu-suru), [[戦う]] / [[闘う]] ([[たたかう]], tatakau), [[闘]] ([[とう]], tô)
+*Romanian: [[luptă]] ''f'', [[bătaie]] ''f''
 *Swedish: [[slåss]]
