--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -33,3 +33,5 @@
 *Japanese: [[喧嘩する]] ([[けんかする]], kenka-suru), [[対決]] ([[たいけつする]], taiketsu-suru), [[戦う]] / [[闘う]] ([[たたかう]], tatakau), [[闘]] ([[とう]], tô)
 *Romanian: [[luptă]] ''f'', [[bătaie]] ''f''
 *Swedish: [[slåss]]
+
+[[it:fight]]
