--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -25,3 +25,5 @@
 *[[German]]: [[gefunden]] 
 *[[Indonesian]]: [[temu]], [[temu|menemukan]], [[temu|menemui]], [[temu|ditemukan]], [[temu|ditemui]]
 *[[Japanese]]: [[見つけた]] (みつけた, mitsuketa), [[見つかった]] ([[みつかった]], mitsukatta), [[発見]]した ([[はっけん]]した, hakken-shita), [[見つけられた]] (みつけられた, mitsukerareta), [[発見]]した ([[はっけん]]された, hakken-sareta)
+
+[[it:found]]
