--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -25,6 +25,7 @@
 *[[{{fr}}]]: [[droit]] ''m'' (1), [[droite]] ''f'' (1), [[comme il faut]] (3), [[pur]] (5), [[pure]] (5), [[hetero]] (8)
 *[[{{pt}}]]: [[reto]] ''m'' (1), [[direto]] ''m'' (3), [[honesto]] ''m'' (3), [[direito]] ''m'' (4)
 *[[{{sv}}]]: [[rak]] (1,3,6)
+*[[Welsh]]: [[uniawn]]
 
 ===Adverb===
 '''straight'''
