--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -1,5 +1,12 @@
+==English==
 ===Etymology===
 :from Middle English ''streght'' (Anglo Saxon ''streht''), the past participle of Middle English ''strechen'' (Anglo-Saxon ''streccan''), to stretch.
+
+===Pronunciation===
+*/<tt>streIt</tt>/
+:Homophone
+**[[strait]]
+
 ===Adjective===
 '''straight''' ([[straighter]], [[straightest]])
 
@@ -18,11 +25,15 @@
 #''[[slang]]'': conventional.
 #''[[slang]]'': heterosexual.
 #(Slang) boring, unappealing, bad or of low quality.
+
 ====Usage Notes====
 *Straight is sometimes humorously used as meaning low quality by homosexuals and bisexuals, rather than [[gay]].
+
 ====Translations====
+*Chinese: [[直]]的, [[笔直的]]
 *[[{{nl}}]]: [[recht]] (1), [[rechte]] (1), [[zoals het hoort]] (3), [[puur]] (5), [[pure]] (5)
 *[[{{fr}}]]: [[droit]] ''m'' (1), [[droite]] ''f'' (1), [[comme il faut]] (3), [[pur]] (5), [[pure]] (5), [[hetero]] (8)
+*Italian: [[dritto]], [[liscio]], [[subito]], [[eterosessuale]] (8)
 *[[{{pt}}]]: [[reto]] ''m'' (1), [[direto]] ''m'' (3), [[honesto]] ''m'' (3), [[direito]] ''m'' (4)
 *[[{{sv}}]]: [[rak]] (1,3,6)
 *[[Welsh]]: [[uniawn]]
@@ -33,6 +44,7 @@
 #in a forward direction.
 #:''straight ahead''
 ====Translations====
+*Chinese: [[直]], [[直接地]]
 *[[Dutch]]: [[rechtdoor]]
 *[[French]]: [[tout droit]]
 *[[Swedish]]: [[rakt fram]]
@@ -47,5 +59,3 @@
 *[[French]]: [[ligne droite]] ''f'' (1), [[quinte]] ''f'' (2)
 *[[Portuguese]]: [[reta]] ''f'' (1)
 *[[Swedish]]: [[raksträcka]], [[raka]]
-===Homophone===
-*[[strait]]
