--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -4,7 +4,7 @@
 '''bridge'''
 
 #A [[construction]] or [[natural]] [[feature]] that [[span]]s a [[divide]].
-#A [[card game]] played normally with four players playing as two teams of two players each.
+#{{cattag|card games}}: A [[card game]] played normally with four players playing as two teams of two players each.
 #The [[upper]] [[bony]] [[ridge]] of the [[human]] [[nose]]
 #A [[replacement]] for one or [[several]] [[teeth]]
 
