--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -4,6 +4,7 @@
 : from Middle French "''blond''" (masculine); "''blonde''" (feminine).
 
 === Noun ===
+''(UK)'' '''blond'''
 #a person of fair skin and hair (usually spelled "''blonde''" when referring to a woman).
 #a [[pale]] [[golden]] [[brown]] [[colour]].
 
@@ -11,11 +12,12 @@
 *Swedish: [[blondin]] 
 
 === Adjective ===
+;blond
 #of a bleached, or pale golden colour.
 #of a blond complexion (referring to a person)
 
 ===Alternate spelling===
-:[[blonde]]
+:[[blonde]] (US)
 
 ====Translations====
 *Swedish: [[blond#Swedish|blond]]
@@ -26,18 +28,14 @@
 ----
 
 ==Dutch==
-
 === Adjective ===
-
 '''blond''' (blonde)
-
 # of light colour, usually said about light hair colour, but it can also refer to beer
 
 ----
 == Swedish ==
 === Adjective ===
 '''blond'''
-
 # of light hair colour.
 
 ====Conjugations====
