--- a/en/地/地.12978.wikitext
+++ b/en/地/地.12978.wikitext
@@ -29,8 +29,87 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': dei6
 
-* '''Compounds''':
-**[[地毯]]
+===Compounds===
+*[[地板]]
+*[[地磅]]
+*[[地标]]
+*[[地表]]
+*[[地表水]]
+*[[地鳖]]
+*[[地波]]
+*[[地步]]
+*[[地财]]
+*[[地磁]]
+*[[地磁赤道]]
+*[[地磁极]]
+*[[地产]]
+*[[地场]]
+*[[地朝]]
+*[[地秤]]
+*[[地大物博]]
+*[[地带]]
+*[[地道]]
+*[[地点]]
+*[[地方]], [[地方儿]]
+*[[地方病]]
+*[[地方主义]]
+*[[地府]]
+*[[地光]]
+*[[堤埂]], [[堤埂儿]]
+*[[地滚球]]
+*[[地核]]
+*[[地黄]]
+*[[地积]]
+*[[地基]]
+*[[地极]]
+*[[地价]]
+*[[地角]]
+*[[地角天涯]]
+*[[地脚]]
+*[[地窖]]
+*[[地缆]]
+*[[地理]]
+*[[地裂]]
+*[[地灵人杰]]
+*[[地漏]]
+*[[地幔]]
+*[[地貌]]
+*[[地面]]
+*[[地气]]
+*[[地壳]]
+*[[地勤]]
+*[[地球]]
+*[[地球仪]]
+*[[地区]]
+*[[地权]]
+*[[地券]]
+*[[地儿]]
+*[[地热]]
+*[[地煞]]
+*[[地上]]
+*[[地毯]]
+*[[地铁]]
+*[[地图]]
+*[[地位]]
+*[[地下]]
+*[[地形]]
+*[[地学]]
+*[[地衣]]
+*[[地榆]]
+*[[地狱]]
+*[[地域]]
+*[[地租]]
+*[[地照]]
+*[[地震]]
+*[[地震波]]
+*[[地震仪]]
+*[[地震震级]]
+*[[地支]]
+*[[地址]]
+*[[地志]]
+*[[地质]]
+*[[地轴]]
+*[[地主]]
 
 * '''Other info''': 
 
@@ -41,6 +120,12 @@
 * '''Readings'''
 ** '''[[On]]''': [[ち]] (chi), [[じ]] (ji)
 ** '''[[Kun]]''': [[つち]] (tsuchi)
+
+===Compounds===
+*[[地球]]
+*[[地底]]
+*[[地理]]
+*[[地盤]]
 
 * '''Other info''':  
 
