--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -31,6 +31,8 @@
 *Japanese: [[橋]] ([[はし]], hashi)
 *[[Old English]]: [[brycg]] ''f''
 *Korean: [[다리]] (da-ri), [[Hanja]]: [[교]] (kyo, used always as suffix)
+*[[Kurdish]] (Kurmancî): [[pir]]
+*[[Kurdish]] (Soranî): [[pird]]
 *Latvian: [[tilts]] ''m''
 *Polish: [[most]] ''m''
 *Spanish: [[puente]] ''f''
