--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -25,7 +25,6 @@
 *Hebrew: [[לבוא]] (lavo)
 *Ido: Venar
 *Indonesian: [[datang]], [[datang|mendatangi]], [[datang|mendatang]], [[datang|mendatangkan]]
-*Irish: [[tar#Irish|tar]]
 *Italian: [[venire]]
 *Japanese: [[来る]] (くる, kuru)
 *[[Kurdish]]: [[hatin]]
@@ -41,6 +40,7 @@
 *Dutch: [[gekomen]]
 *French: [[venu]]
 *Indonesian: [[datang]], [[datang|didatangi]], [[datang|didatangkan]], [[datang|berdatangan]]
+*Irish: [[tagtha]]
 *Italian: [[venuto]]
 *Japanese: [[来た]] (きた, kita)
 *[[Kurdish]]: [[hatî]]
