--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -40,6 +40,7 @@
 ==== Translations ====
 *Dutch: [[gekomen]]
 *French: [[venu]]
+*German: [[gekommen]]
 *Indonesian: [[datang]], [[datang|didatangi]], [[datang|didatangkan]], [[datang|berdatangan]]
 *Irish: [[tagtha]]
 *Italian: [[venuto]]
