--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -23,7 +23,7 @@
 *French: [[venir]]
 *German: [[kommen]]
 *Hebrew: [[לבוא]] (lavo)
-*Ido: Venar
+*Ido: [[Venar]]
 *Indonesian: [[datang]], [[datang|mendatangi]], [[datang|mendatang]], [[datang|mendatangkan]]
 *Irish: [[tar#Irish|tar]]
 *Italian: [[venire]]
