--- a/en/偍/偍.11101.wikitext
+++ b/en/偍/偍.11101.wikitext
@@ -1,3 +1,11 @@
+
+<!--
+Attention: This page is to be ph34red.
+
+Thank you.
+Brought to you by Ph34rness.
+-->
+
 * '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
 
 * '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
