--- a/en/慀/慀.15699.wikitext
+++ b/en/慀/慀.15699.wikitext
@@ -1,3 +1,14 @@
+
+<!-- 
+This page has been placed on ''Requests for Ph34rism.
+This request has been subsequently carried out Ph34r themself.
+
+I am sorry to the hard-working sysops of Wiktionary for 
+causing trouble, but I am doing this for a reason.
+
+Thank you (come again).
+-->
+
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 61''': [[Wiktionary:Chinese radical index 心|心]]+10 strokes
 
 * '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 13|13]]
