--- a/en/p/pen.4773.wikitext
+++ b/en/p/pen.4773.wikitext
@@ -48,6 +48,11 @@
 *French: [[enclos]] ''m''
 *Italian: [[recinto]] ''m'', [[chiuso]] ''m'', (''for sheep'') [[ovile]] ''m'', recinto, chiuso
 
+===Transitive verb===
+'''to pen''' ([[penned]] / [[pent]], penned / pent)
+
+#To enclose. The irregular past tense ''pent'' is primarilly used in a figurative sense in the phrase "pent up".
+
 ===Noun===
 '''pen'''
 
