--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -6,6 +6,8 @@
 #To apply a [[force]] to (an object) such that it comes [[toward]] the person applying the force.
 #(''slang'') To persuade (someone) to have sex with one.
 #:''He's pulled that bird over there.''
+#to [[remove]], especially from public [[circulation]] or [[availability]]
+#:''Each day, they pulled the old bread and set out fresh loaves.''
 
 ====Synonyms====
 *(''apply force to''): [[drag]], [[tow]], [[tug]]
