--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -44,33 +44,32 @@ Term meaning "What a mess!" or "What a screw-up!"
 '''''Usage Note:''''' ''Beautiful'' can also be exclaimed by someone to mean "What a thing of beauty!"  ('''Example:'''  ''Beautiful!  What a catch!'' [referring to an athlete catching a ball]).  In this usage, ''beautiful'' would generally be labeled an adjective, not an interjection.
 
 === Translations ===
-*[[Afrikaans]]: [[mooi]]
-*[[Anglo-Saxon]]: [[wlitig]]
-*[[Arabic]]: [[جميل]]
-*[[Breton]]: [[brav]], [[kaer]]
-*[[Bulgarian]]:[[красив, прекрасен]]
+*Afrikaans: [[mooi]]
+*Anglo-Saxon: [[wlitig]]
+*Arabic: [[جميل]]
+*Breton: [[brav]], [[kaer]]
+*Bulgarian:[[красив, прекрасен]]
 *Chinese: [[美]] (měi, meili, mei3li4)
 *Dutch: [[mooi]]
-*[[Esperanto]]: [[bela]]
-*[[Estonian]]: [[kaunis]] [[ilus]]
+*Esperanto: [[bela]]
+*Estonian: [[kaunis]] [[ilus]]
 *Fijian: [[totoka]]
-*{{fi}}: [[kaunis]]
-*{{fr}}: [[beau]] ''m'', [[belle]] ''f''
-*{{fo}}: [[vakur]] ''m'', [[vøkur]] ''f'' [[vakurt]] ''n''
-*[[Frisian]]: [[moai]], [[kreas]]
-*{{de}}: [[schön]]
+*Finnish: [[kaunis]]
+*French: [[beau]] ''m'', [[belle]] ''f''
+*Faeroese: [[vakur]] ''m'', [[vøkur]] ''f'' [[vakurt]] ''n''
+*Frisian: [[moai]], [[kreas]]
+*German: [[schön]]
 *Indonesian: [[indah]], [[cantik]], [[ayu]], [[molek]], [[cakep]]
-*{{it}}: [[bello]]
-*{{ja}}: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
-*{{la}}: [[pulcher]], [[formosus]] ''m'', [[bellus]] ''m''
-*[[Polish]]: [[piękny]]
-*{{pt}}: [[belo]] ''m'', [[bela]] ''f'', [[bonito]] ''m'', [[bonita]] ''f''
-*[[Romanica]]: [[bello]] ''m'', [[bella]] ''f''
-*{{ru}}: [[красивый]],[[прекрасный]]
-*{{es}}: [[hermoso]] ''m'', [[hermosa]] ''f'', ''[[bello]]'', ''[[lindo]]'', ''[[chico]]''
-*{{sk}}: [[krásny]] ''m'', krásna ''f'', krásne ''n''
-*{{sv}}: [[vacker]]
-*{{vi}}: [[đẹp]], [[đẹp đẽ]]
+*Italian: [[bello]]
+*Japanese: [[美しい]] ([[うつくしい]], utsukushii), [[綺麗]] ([[きれい]], kirei), [[素敵]] ([[すてき]], suteki)
+*Latin: [[pulcher]], [[formosus]] ''m'', [[bellus]] ''m''
+*Polish: [[piękny]]
+*Portuguese: [[belo]] ''m'', [[bela]] ''f'', [[bonito]] ''m'', [[bonita]] ''f''
+*Russian: [[красивый]],[[прекрасный]]
+*Spanish: [[hermoso]] ''m'', [[hermosa]] ''f'', ''[[bello]]'', ''[[lindo]]'', ''[[chico]]''
+*Slovak: [[krásny]] ''m'', krásna ''f'', krásne ''n''
+*Swedish: [[vacker]]
+*Vietnamese: [[đẹp]], [[đẹp đẽ]]
 *Turkish: [[güzel]]
 
 [[Category:1000 English basic words]]
