--- a/en/偃/偃.11089.wikitext
+++ b/en/偃/偃.11089.wikitext
@@ -1,20 +1,14 @@
-* '''[[Wiktionary:Chinese radical index| Radical]]''': [[Wiktionary:Chinese radical index 人|人]]+9
-
-* '''[[Wiktionary:Chinese total strokes index|Stroke number]]''': [[Wiktionary:Chinese total strokes index 11|11]]
-
-* '''Stroke order''': 
-
-* '''[[Wiktionary:Chinese four corner index|Four-Corner System]]''': 2121<sub>4</sub>
-
-* '''[[Wiktionary:Chinese Cangjie index|Cangjie input]]''': 人尸日女 (OSAV)
-
-* '''Graphical Significance and Origin''': 
-
-* '''Common Meaning''': cease, lay off, lay down
-
+==Translingual==
+===Han character===
+{{Han char|rad=人|as=09|sn=11|four=2121<sub>4</sub>|canj=人尸日女 (OSAV)}}
+# cease, lay off, lay down
+====References====
+{{Han ref|kx=0109.220|dkj=00830|dj=0233.110|hdz=10187.010|uh=5043|ud=20547|bh=B0B3|bd=45235}}
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+==Chinese==
+===Hanzi===
+
 
 * '''Romanizations'''
 ** [[Mandarin]]
@@ -26,21 +20,18 @@
 ***'''[[Penkyamp]]''': 
 ***'''[[Yale]]''': yin2
 
-* '''Other info''': 
 
 ----
-
 ==Japanese==
-===[[Kanji]]===
-{{kanji|on readings=[[えん]] (en)
-|kun readings=[[ふせる]] (fuseru), [[やすむ]] (yasumu)
-}}
+===Kanji===
+{{ja-kanji|grade=|rs=人09}}
+====Readings====
+{{ja-readings|on=[[えん]] (en)|kun=[[ふせる]] (fuseru), [[やすむ]] (yasumu)}}
 
-* '''Other info''':  
 
 ----
-
-== [[Korean]] [[Hanja]] ==
+==Korean==
+===Hanja===
 
 * '''Pronunciation''': 언
 
@@ -48,22 +39,5 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': eon
 ** '''[[McCune-Reischauer]]''': ŏn
 
-----
-
-== Dictionary Information ==
-
-* KangXi: 0109.220
-* Morohashi: 00830
-* Dae Jaweon: 0233.110
-* Hanyu Da Zidian: 10187.010
-
-== Technical Information ==
-
-* '''Unicode''':
-** Hex: 5043
-** Decimal: 20547
-* '''Big5''':
-** Hex: B0B3
-** Decimal: 45235
 
 [[fr:偃]]
